DB - Fixing some layout issues and also contributing docs

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -678,6 +678,11 @@ button {
   padding: 1em;
 }
 
+button a {
+  color: inherit;
+  text-decoration: none;
+}
+
 .nav-footer {
   background: #402060;
   border: none;
